[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-sentinel"
version = "0.1.0"
description = "A high-availability, Raft-backed orchestrator for stateful AI Agents"
requires-python = ">=3.10"
dependencies = [
    "pysyncobj>=0.3.12",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=4.25.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
agentic = ["langgraph>=0.1.0", "langchain-core>=0.1.0"]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_sentinel*"]
